--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-    "version": 2,
-    "routes": [
-      {
-        "src": "/images/(.*)",
-        "dest": "/images/$1"
-      }
-    ]
-  }
+  "version": 2,
+  "routes": [
+    {
+      "src": "/images/(.*)",
+      "dest": "/AppComponents/Images/$1"
+    }
+  ]
+}
